# SubInspector

./: .gitattributes  .gitignore  .gitmodules  ASSInspector.sln  CMakeLists.txt  DependencyControl.json  Makefile  SubInspector.sln  builddeps.sh  cleandeps.sh  meson.build  meson_options.txt  readme.md
.cmake/: Findlibass.cmake
examples/: aegisub_example.moon  fonts.conf
examples/Aegisub/: Inspector.moon
examples/C++/: Makefile  example.cpp
msvs/ASSI_Example/: ASSI_Example.vcxproj  ASSI_Example.vcxproj.filters
msvs/ASSInspector/: ASSInspector.vcxproj  ASSInspector.vcxproj.filters
msvs/SI_Example/: SI_Example.vcxproj
msvs/SubInspector/: SubInspector.vcxproj
msvs/fontconfig/: fontconfig.vcxproj
msvs/freetype2/: freetype2.vcxproj
msvs/fribidi/: fribidi.vcxproj
msvs/libass/: libass.vcxproj
msvs/libass/include/: config.h
src/: ASSInspector.c  ASSInspector.h  CMakeLists.txt  OptimASS.c  OptimASS.h  OptimASS.moon  SubInspector.c  SubInspector.h  crc32table.h  meson.build
subprojects/: harfbuzz.wrap
